--- a/app/globals.css
+++ b/app/globals.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 body {
-  background: ffffff;
+  background: #ffffff;
   background-image: radial-gradient(#bdbdbd 1px, transparent 0);
   background-size: 20px 20px;
   background-position: -19px -19px;
